complete migration to neo4j
