# src/internal/openapi/ogen/oas_response_encoders_gen.go
@@ -79,32 +79,6 @@ func encodeCreateSubjectRelationResponse(response CreateSubjectRelationRes, w ht
 	}
 }
 
-func encodeGetSubjectResponse(response GetSubjectRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *SubjectGetResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *GetSubjectNotFound:
-		w.WriteHeader(404)
-		span.SetStatus(codes.Error, http.StatusText(404))
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
 func encodeGetSubjectByNameResponse(response GetSubjectByNameRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *SubjectGetResponse:
