# src/internal/openapi/ogen/oas_server_gen.go
@@ -20,12 +20,6 @@ type Handler interface {
 	//
 	// POST /subject-relations
 	CreateSubjectRelation(ctx context.Context, req *SubjectRelationCreateRequest) (CreateSubjectRelationRes, error)
-	// GetSubject implements getSubject operation.
-	//
-	// Returns a single Subject by id.
-	//
-	// GET /subjects/{subjectId}
-	GetSubject(ctx context.Context, params GetSubjectParams) (GetSubjectRes, error)
 	// GetSubjectByName implements getSubjectByName operation.
 	//
 	// Returns subject by name.
